--- a/.github/workflows/metric.yml
+++ b/.github/workflows/metric.yml
@@ -1,75 +1,23 @@
-# Visit https://github.com/lowlighter/metrics#-documentation for full reference
 name: Metrics
 on:
-  # Schedule updates (each hour)
-  schedule: [{cron: "0 * * * *"}]
-  # Lines below let you run workflow manually and on each commit
+  schedule:
+    - cron: "0 * * * *"
   workflow_dispatch:
-  push: {branches: ["master", "main"]}
+  push:
+    branches: ["master", "main"]
 jobs:
   github-metrics:
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
     steps:
-      - uses: stalomeow/metrics@projects-v2
+      - uses: lowlighter/metrics@projects-v2
         with:
-          # Your GitHub token
-          # The following scopes are required:
-          #  - public_access (default scope)
-          # The following additional scopes may be required:
-          #  - read:org      (for organization related metrics)
-          #  - read:user     (for user related data)
-          #  - read:packages (for some packages related data)
-          #  - repo          (optional, if you want to include private repositories)
           token: ${{ secrets.METRICS_TOKEN }}
-
-          # Options
           user: Johnnyallen07
           template: classic
           base: header, repositories, metadata
           config_timezone: Asia/Shanghai
-          repositories_affiliations: owner, collaborator
-          repositories_skipped: |
-            @use.patterns
-            Johnnyallen07/school
-            -nvimdev/*
-            +nvimdev/guard*
-          plugin_lines_skipped: |
-            @use.patterns
-            Johnnyallen07/school
-            -nvimdev/*
-            +nvimdev/guard*
-          plugin_languages_skipped: |
-            @use.patterns
-            Johnnyallen07/school
-            -nvimdev/*
-            +nvimdev/guard*
-          plugin_achievements: yes
-          plugin_achievements_display: detailed
-          plugin_achievements_secrets: yes
-          plugin_achievements_threshold: B
-          plugin_code: yes
-          plugin_code_days: 3
-          plugin_code_lines: 12
-          plugin_code_load: 400
-          plugin_code_visibility: public
-          plugin_languages: yes
-          plugin_languages_aliases: RenderScript:Rust
-          plugin_languages_analysis_timeout: 60
-          plugin_languages_analysis_timeout_repositories: 15
-          plugin_languages_categories: markup, programming
-          plugin_languages_colors: github
-          plugin_languages_details: percentage, lines
-          plugin_languages_ignored: markdown, html, tex, typst
-          plugin_languages_limit: 8
-          plugin_languages_recent_categories: markup, programming
-          plugin_languages_recent_days: 14
-          plugin_languages_recent_load: 300
-          plugin_languages_sections: most-used, recently-used
-          plugin_languages_threshold: 0%
           plugin_lines: yes
-          plugin_lines_history_limit: 1
+          
+          plugin_lines_sections: repositories, history
           plugin_lines_repositories_limit: 4
-          plugin_lines_sections: base
-          plugin_languages_indepth: yes
+          plugin_lines_history_limit: 1
