--- a/.github/workflows/metric.yml
+++ b/.github/workflows/metric.yml
@@ -9,15 +9,13 @@ jobs:
   github-metrics:
     runs-on: ubuntu-latest
     steps:
-      - uses: lowlighter/metrics@projects-v2
+      - uses: lowlighter/metrics@latest
         with:
-          token: ${{ secrets.METRICS_TOKEN }}
-          user: Johnnyallen07
-          template: classic
-          base: header, repositories, metadata
-          config_timezone: Asia/Shanghai
-          plugin_lines: yes
-          
-          plugin_lines_sections: repositories, history
-          plugin_lines_repositories_limit: 4
-          plugin_lines_history_limit: 1
+            filename: metrics.plugin.languages.svg
+            token: ${{ secrets.METRICS_TOKEN }}
+            base: ""
+            plugin_languages: yes
+            plugin_languages_ignored: >-
+              html, css, tex, less, dockerfile, makefile, qmake, lex, cmake, shell,
+              gnuplot
+            plugin_languages_limit: 4
