--- a/.github/workflows/metric.yml
+++ b/.github/workflows/metric.yml
@@ -1,21 +1,27 @@
 name: Metrics
 on:
-  schedule:
-    - cron: "0 * * * *"
+  # Schedule daily updates
+  schedule: [{cron: "0 0 * * *"}]
+  # (optional) Run workflow manually
   workflow_dispatch:
-  push:
-    branches: ["master", "main"]
+  # (optional) Run workflow when pushing on master/main
+  push: {branches: ["master", "main"]}
 jobs:
   github-metrics:
     runs-on: ubuntu-latest
+    environment: 
+      name: production
+    permissions:
+      contents: write
     steps:
       - uses: lowlighter/metrics@latest
         with:
-            filename: metrics.plugin.languages.svg
-            token: ${{ secrets.METRICS_TOKEN }}
-            base: ""
-            plugin_languages: yes
-            plugin_languages_ignored: >-
-              html, css, tex, less, dockerfile, makefile, qmake, lex, cmake, shell,
-              gnuplot
-            plugin_languages_limit: 4
+          token: ${{ secrets.METRICS_TOKEN }}
+          base: ""
+          plugin_languages: yes
+          plugin_languages_ignored: >-
+            html, css, tex, less, dockerfile, makefile, qmake, lex, cmake, shell,
+            gnuplot
+          plugin_languages_limit: 4
+          plugin_achievements: yes
+          plugin_achievements_only: sponsor, maintainer, octonaut
