--- a/.github/workflows/metric.yml
+++ b/.github/workflows/metric.yml
@@ -1,27 +1,31 @@
 name: Metrics
 on:
-  # Schedule daily updates
-  schedule: [{cron: "0 0 * * *"}]
-  # (optional) Run workflow manually
+  schedule: [{ cron: "0 0 * * *" }]
   workflow_dispatch:
-  # (optional) Run workflow when pushing on master/main
-  push: {branches: ["master", "main"]}
+  push: { branches: ["main", "master"] }
+
 jobs:
   github-metrics:
     runs-on: ubuntu-latest
-    environment: 
-      name: production
-    permissions:
-      contents: write
+    permissions: { contents: write }
     steps:
-      - uses: lowlighter/metrics@latest
+      - name: 📊 Generate profile card
+        uses: lowlighter/metrics@latest
         with:
-          token: ${{ secrets.METRICS_TOKEN }}
-          base: ""
+         
+          token: ${{ secrets.METRICS_TOKEN }}   
+          user:  ${{ github.repository_owner }} 
+          base:  ""                             
+          filename: metrics.svg                 
+
+          # — languages plugin —
           plugin_languages: yes
-          plugin_languages_ignored: >-
-            html, css, tex, less, dockerfile, makefile, qmake, lex, cmake, shell,
-            gnuplot
           plugin_languages_limit: 4
+          plugin_languages_ignored: >-
+            html, css, tex, less, dockerfile, makefile, qmake, lex, cmake, shell, gnuplot
+
+          # — achievements plugin —
           plugin_achievements: yes
           plugin_achievements_only: sponsor, maintainer, octonaut
+          plugin_achievements_display: compact      # optional – nice with many badges
+          plugin_achievements_threshold: X          # show even the locked ones
