--- a/.github/workflows/metric.yml
+++ b/.github/workflows/metric.yml
@@ -1,38 +1,54 @@
+# Visit https://github.com/lowlighter/metrics#-documentation for full reference
 name: Metrics
 on:
-  schedule: [{cron: "0 0/24 * * *"}]
-  workflow_dispatch:
-  push: { branches: ["main", "master"] }
 
+  schedule: [{cron: "0 0/24 * * *"}]
+  # Lines below let you run workflow manually and on each commit
+  workflow_dispatch:
+  push: {branches: ["master", "main"]}
 jobs:
   github-metrics:
     runs-on: ubuntu-latest
-    environment: 
-      name: production
-    permissions: { contents: write }
+    permissions:
+      contents: write
     steps:
       - uses: stalomeow/metrics@projects-v2
         with:
-         
-          token: ${{ secrets.METRICS_TOKEN }}   
-          user:  Johnnyallen07
+          # Your GitHub token
+          # The following scopes are required:
+          #  - public_access (default scope)
+          # The following additional scopes may be required:
+          #  - read:org      (for organization related metrics)
+          #  - read:user     (for user related data)
+          #  - read:packages (for some packages related data)
+          #  - repo          (optional, if you want to include private repositories)
+          token: ${{ secrets.METRICS_TOKEN }}
+
+          # Options
+          user: Johnnyallen07
+          template: classic
           base: header, activity, community, repositories, metadata
-          template: classic                          
-          filename: metrics.svg                 
-
-          # — languages plugin —
-          plugin_languages: yes
-          plugin_languages_colors: github
-          plugin_languages_limit: 8
-          plugin_languages_sections: most-used
-          plugin_languages_ignored: html, css
-          plugin_languages_details: percentage #, lines
-          plugin_languages_indepth: yes
-          plugin_languages_analysis_timeout: 30
-
-          # — achievements plugin —
+          base_indepth: yes
+          config_timezone: Asia/Shanghai
           plugin_achievements: yes
-          plugin_achievements_threshold: X
-          plugin_achievements_limit: 16
           plugin_achievements_display: detailed
-  
+          plugin_achievements_secrets: yes
+          plugin_achievements_threshold: C
+          plugin_code: yes
+          plugin_code_days: 3
+          plugin_code_lines: 12
+          plugin_code_load: 400
+          plugin_code_visibility: public
+          plugin_languages: yes
+          plugin_languages_aliases: RenderScript:Rust
+          plugin_languages_analysis_timeout: 15
+          plugin_languages_analysis_timeout_repositories: 7.5
+          plugin_languages_categories: markup, programming
+          plugin_languages_colors: github
+          plugin_languages_indepth: yes
+          plugin_languages_limit: 8
+          plugin_languages_recent_categories: markup, programming
+          plugin_languages_recent_days: 14
+          plugin_languages_recent_load: 300
+          plugin_languages_sections: recently-used
+          plugin_languages_threshold: 0%
