--- a/.github/workflows/metric.yml
+++ b/.github/workflows/metric.yml
@@ -1,54 +1,27 @@
-# Visit https://github.com/lowlighter/metrics#-documentation for full reference
 name: Metrics
 on:
-
-  schedule: [{cron: "0 0/24 * * *"}]
-  # Lines below let you run workflow manually and on each commit
+  schedule: [{ cron: "0 0 * * *" }]
   workflow_dispatch:
-  push: {branches: ["master", "main"]}
+  push: { branches: ["main", "master"] }
+
 jobs:
   github-metrics:
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
+    environment: 
+      name: production
+    permissions: { contents: write }
     steps:
-      - uses: stalomeow/metrics@projects-v2
+      - name: 📊 Generate profile card
+        uses: lowlighter/metrics@latest
         with:
-          # Your GitHub token
-          # The following scopes are required:
-          #  - public_access (default scope)
-          # The following additional scopes may be required:
-          #  - read:org      (for organization related metrics)
-          #  - read:user     (for user related data)
-          #  - read:packages (for some packages related data)
-          #  - repo          (optional, if you want to include private repositories)
-          token: ${{ secrets.METRICS_TOKEN }}
+         
+          token: ${{ secrets.METRICS_TOKEN }}   
+          user:  ${{ github.repository_owner }} 
+          base:  ""                             
+          filename: metrics.svg                 
 
-          # Options
-          user: Johnnyallen07
-          template: classic
-          base: header, activity, community, repositories, metadata
-          base_indepth: yes
-          config_timezone: Asia/Shanghai
-          plugin_achievements: yes
-          plugin_achievements_display: detailed
-          plugin_achievements_secrets: yes
-          plugin_achievements_threshold: C
-          plugin_code: yes
-          plugin_code_days: 3
-          plugin_code_lines: 12
-          plugin_code_load: 400
-          plugin_code_visibility: public
+          # — languages plugin —
           plugin_languages: yes
-          plugin_languages_aliases: RenderScript:Rust
-          plugin_languages_analysis_timeout: 15
-          plugin_languages_analysis_timeout_repositories: 7.5
-          plugin_languages_categories: markup, programming
-          plugin_languages_colors: github
-          plugin_languages_indepth: yes
-          plugin_languages_limit: 8
-          plugin_languages_recent_categories: markup, programming
-          plugin_languages_recent_days: 14
-          plugin_languages_recent_load: 300
-          plugin_languages_sections: recently-used
-          plugin_languages_threshold: 0%
+          plugin_languages_limit: 16
+          plugin_languages_ignored: >-
+            html, css, tex, less, dockerfile, makefile, qmake, lex, cmake, shell, gnuplot
