--- a/.github/workflows/metric.yml
+++ b/.github/workflows/metric.yml
@@ -16,8 +16,11 @@ jobs:
         with:
          
           token: ${{ secrets.METRICS_TOKEN }}   
-          user:  Johnnyallen07
-          base:  ""                                      
+          user:  Johnnyallen07        
+
+          # classic template"
+          base: header, repositories
+          plugin_lines: yes                             
     
 
           # — languages plugin —
