--- a/.github/workflows/metric.yml
+++ b/.github/workflows/metric.yml
@@ -28,3 +28,8 @@ jobs:
           plugin_languages_limit: 16
           plugin_languages_ignored: >-
             html, css, tex, less, dockerfile, makefile, qmake, lex, cmake, shell, gnuplot
+
+          # try to add some achievements"
+
+          plugin_achievements: yes
+          plugin_achievements_display: detailed
