--- a/.github/workflows/metric.yml
+++ b/.github/workflows/metric.yml
@@ -31,5 +31,12 @@ jobs:
 
           # try to add some achievements"
 
-          plugin_achievements: yes
-          plugin_achievements_display: detailed
+          # plugin_achievements: yes
+          # plugin_achievements_display: detailed
+
+          # Achievement system crashed
+
+          # detect the total line of code
+          plugin_languages_indepth: yes
+          plugin_languages_limit: 8
+          plugin_languages_analysis_timeout: 15
