--- a/.github/workflows/metric.yml
+++ b/.github/workflows/metric.yml
@@ -19,7 +19,7 @@ jobs:
           user:  Johnnyallen07        
 
           # classic template"
-          base: header, repositories
+          base: header, activity, community, repositories, metadata
           plugin_lines: yes                             
     
 
@@ -27,7 +27,7 @@ jobs:
           plugin_languages: yes
           plugin_languages_limit: 16
           plugin_languages_ignored: >-
-            html, css, tex, less, dockerfile, makefile, qmake, lex, cmake, shell, gnuplot
+            html, css
 
           # try to add some achievements"
 
@@ -40,3 +40,6 @@ jobs:
           plugin_languages_indepth: yes
           plugin_languages_details: lines, bytes-size, percentage
           plugin_languages_analysis_timeout: 15
+
+          # add org
+          repositories_affiliations: owner, organization_member
