--- a/.github/workflows/metric.yml
+++ b/.github/workflows/metric.yml
@@ -25,7 +25,7 @@ jobs:
 
           # — languages plugin —
           plugin_languages: yes
-          plugin_languages_limit: 16
+          plugin_languages_limit: 8
           plugin_languages_ignored: >-
             html, css
 
@@ -45,4 +45,4 @@ jobs:
           repositories_affiliations: owner, organization_member
 
           # recently used
-          plugin_languages_sections: recently-used
+          # plugin_languages_sections: recently-used
