--- a/.github/workflows/metric.yml
+++ b/.github/workflows/metric.yml
@@ -39,7 +39,6 @@ jobs:
           # detect the total line of code
           plugin_languages_indepth: yes
           plugin_languages_details: lines, bytes-size, percentage
-          plugin_languages_analysis_timeout: 15
 
           # add org
           repositories_affiliations: owner, organization_member
@@ -51,3 +50,6 @@ jobs:
 
           plugin_languages_analysis_timeout: 60
           plugin_languages_analysis_timeout_repositories: 15
+
+          # add all visibility
+          repositories_visibility: all
