--- a/.github/workflows/metric.yml
+++ b/.github/workflows/metric.yml
@@ -37,8 +37,8 @@ jobs:
           # Achievement system crashed
 
           # detect the total line of code
-          plugin_languages_indepth: yes
-          plugin_languages_details: lines, bytes-size, percentage
+          plugin_languages_indepth: no
+          plugin_languages_details: bytes-size, percentage
 
           # add org
           repositories_affiliations: owner, organization_member
