--- a/.github/workflows/metric.yml
+++ b/.github/workflows/metric.yml
@@ -44,7 +44,7 @@ jobs:
           repositories_affiliations: owner, organization_member
 
           # recently used
-          plugin_languages_sections: most-used, recently-used
+          plugin_languages_sections: most-used
 
           # set for more indepth
 
