--- a/.github/workflows/metric.yml
+++ b/.github/workflows/metric.yml
@@ -27,7 +27,7 @@ jobs:
           plugin_languages: yes
           plugin_languages_limit: 8
           plugin_languages_ignored: >-
-            html, css
+            html, css, dockerfile,
 
           # try to add some achievements"
 
